# lsearch

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
native/: CMakeLists.txt
native/src/: main.cpp
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/lookup/: route.ts
src/app/api/me/: route.ts
src/app/api/saved-searches/: route.ts
src/app/api/search/: route.ts
src/app/api/settings/: route.ts
src/app/api/usage/: route.ts
src/app/login/: page.tsx
src/app/ui/: Dashboard.tsx  NativeTitlebar.tsx
src/lib/: auth.ts  brixhub.ts  query.ts  state.ts  types.ts
